1.5/yaml/ingress.netology.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-1.5
  namespace: netology
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ingress-1.5.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-frontend
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: src-backend
            port:
              number: 80
